--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ assets/css/style.css
 .vs/taskmaster-pro/v16/.suo
 .vs/VSWorkspaceState.json
 .vs/taskmaster-pro/v16/.suo
+.vs/taskmaster-pro/v16/.suo
