--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ assets/css/style.css
 .vs/VSWorkspaceState.json
 .vs/taskmaster-pro/v16/.suo
 .vs/taskmaster-pro/v16/.suo
+.vs/taskmaster-pro/v16/.suo
